[package]
name = "libscroll-re"
version = "0.1.0"
authors = ["Sawyer Bergeron <sawyerbergeron@gmail.com>"]
edition = "2018"
license = "MIT"
description = "ocaml/reason bindings for libscroll, packaged into a system lib"

[lib]
name = "libscroll_re"
crate_type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libscroll = { path = "../../libscroll" }
ocaml = "0.8.1"
num = "0.2"
